05042025 v2
FreeDaysBookingService method freeDaysRequest updated with DTO model